<resources>
    <string name="app_name" translatable="false">CountryFlagGame</string>
    <string name="Albania">Albania</string>
    <string name="Andorra">Andorra</string>
    <string name="Austria">Austria</string>
    <string name="Belarus">Belarus</string>
    <string name="Belgium">Belgium</string>
    <string name="BosniaAndHerzegovina">B&amp;H</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="Croatia">Croatia</string>
    <string name="Cyprus">Cyprus</string>
    <string name="CzechRepublic">Czech Republic</string>
    <string name="Denmark">Denmark</string>
    <string name="Estonia">Estonia</string>
    <string name="FaroeIslands">Faroe Islands</string>
    <string name="Finland">Finland</string>
    <string name="France">France</string>
    <string name="Germany">Germany</string>
    <string name="Gibraltar">Gibraltar</string>
    <string name="Greece">Greece</string>
    <string name="Greenland">Greenland</string>
    <string name="Hungary">Hungary</string>
    <string name="Iceland">Iceland</string>
    <string name="Ireland">Ireland</string>
    <string name="Italy">Italy</string>
    <string name="Latvia">Latvia</string>
    <string name="Liechtenstein">Liechtenstein</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Luxembourg">Luxembourg</string>
    <string name="Macedonia">Macedonia</string>
    <string name="Malta">Malta</string>
    <string name="Moldova">Moldova</string>
    <string name="Monaco">Monaco</string>
    <string name="Montenegro">Montenegro</string>
    <string name="Netherlands">Netherlands</string>
    <string name="Norway">Norway</string>
    <string name="Poland">Poland</string>
    <string name="Portugal">Portugal</string>
    <string name="Romania">Romania</string>
    <string name="Russia">Russia</string>
    <string name="SanMarino">San Marino</string>
    <string name="Serbia">Serbia</string>
    <string name="Slovakia">Slovakia</string>
    <string name="Slovenia">Slovenia</string>
    <string name="Spain">Spain</string>
    <string name="Sweden">Sweden</string>
    <string name="Switzerland">Switzerland</string>
    <string name="Turkey">Turkey</string>
    <string name="Ukraine">Ukraine</string>
    <string name="UnitedKingdom">United Kingdom</string>
    <string name="VaticanCity">Vatican City</string>
    <string name="next">next</string>
    <string name="quit">Quit</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="play">Play</string>
    <string name="todo3">TODO</string>
    <string name="retake">retake</string>
    <string name="correct">Your answer is correct!</string>
    <string name="incorrect">Your answer is incorrect!</string>
    <string name="todo4">TODO</string>
    <string name="appMaker">\"Guess the flag Application\"\nby Amar Omerović</string>
</resources>