<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".endScreen">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo3"
        android:padding="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        app:srcCompat="@drawable/game_over"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/retakeButton"
        style="@style/choiceButtonsNewStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="#00B0FF"
        android:text="@string/retake"
        app:layout_constraintBottom_toTopOf="@+id/quitButtonEndScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/quitButtonEndScreen"
        style="@style/choiceButtonsNewStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="#00B0FF"
        android:text="@string/quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retakeButton"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/pointView"
        style="@style/choiceButtonsNewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textSize="200sp"
        app:layout_constraintBottom_toTopOf="@+id/retakeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.437" />

</androidx.constraintlayout.widget.ConstraintLayout>